<resources>
    <string name="app_name">FavoriteCompanyHomeWorkLec6</string>
    <string name="tv_select_your_favorite_drink">Select Your Favorite Drink</string>
    <string name="tv_coke">Coke</string>
    <string name="tv_pepsi">Pepsi</string>
    <string name="tv_schweppes">Schweppes</string>
    <string name="tv_dr_pepper">Dr. Pepper</string>
    <string name="tv_drppper_description">The name Dr. Pepper was first used commercially in 1885.[2] It was introduced nationally in the United States at the 1904 Louisiana Purchase Exposition as a new kind of soda pop, made with 23 flavors. Its introduction in 1885 preceded the introduction of Coca-Cola by one year. It was formulated by Brooklyn-born pharmacist Charles Alderton in Morrison\'s Old Corner Drug Store in Waco, Texas.[1] To test his new drink, he first offered it to store owner Wade Morrison, who also found it to his liking. Patrons at Morrison\'s soda fountain soon learned of Alderton\'s new drink and began ordering a \"Waco\".[3] Alderton gave the formula to Morrison, who named it Dr. Pepper (later stylized as \"Dr Pepper\"). Early advertisements for this soft drink made medical claims, stating that it \"aids digestion and restores vim, vigor, and vitality.\"[4] As with Coca-Cola, the formula for Dr Pepper is a trade secret, and allegedly the recipe is kept as two halves in safe deposit boxes in two separate Dallas banks.[5] A persistent rumor since the 1930s is that the drink contains prune juice,[5] but the official Dr Pepper FAQ refutes this with Dr Pepper is a unique blend of natural and artificial flavors; it does not contain prune juice. The origin of the rumor is unknown; some believe it was started by a deliveryman for a competitor trying to cast aspersions based on prune juice\'s laxative effects,[5] but it may simply be because many people feel that Dr Pepper tastes similar to prune juice.[6] In 2009, an old ledger book filled with formulas and recipes was discovered by Bill Waters while shopping at antiques stores in the Texas Panhandle.[7] Several sheets and letterheads hinted it had come from the W.B. Morrison Co. Old Corner Drug Store (the same store where Dr Pepper was first served in 1885) and faded letters on the book\'s cover spelled out Castles Formulas. John Castles was a partner of Morrison\'s for a time and worked at that location as early as 1880. One recipe in the book titled Dr Peppers Pepsin Bitters was of particular interest, and some speculated it could be an early recipe for Dr Pepper. However, Keurig Dr Pepper insists it is not the formula for Dr Pepper, but is instead a medicinal recipe for a digestive aid. The book was put up for auction in May 2009, but no one purchased it.</string>
    <string name="tv_coke_description">Coca-Cola, or Coke, is a carbonated soft drink manufactured by the Coca-Cola Company. Originally marketed as a temperance drink and intended as a patent medicine, it was invented in the late 19th century by John Stith Pemberton in Atlanta, Georgia. In 1888 Pemberton sold Coca-Cola\'s ownership rights to Asa Griggs Candler, a businessman, whose marketing tactics led Coca-Cola to its dominance of the global soft-drink market throughout the 20th and 21st century.[1] The drink\'s name refers to two of its original ingredients: coca leaves and kola nuts (a source of caffeine). The current formula of Coca-Cola remains a closely guarded trade secret; however, a variety of reported recipes and experimental recreations have been published. The secrecy around the formula has been used by Coca-Cola in its marketing as only a handful of anonymous employees know the formula.[2] The drink has inspired imitators and created a whole classification of soft drink: colas. The Coca-Cola Company produces concentrate, which is then sold to licensed Coca-Cola bottlers throughout the world. The bottlers, who hold exclusive territory contracts with the company, produce the finished product in cans and bottles from the concentrate, in combination with filtered water and sweeteners. A typical 12-US-fluid-ounce (350 ml) can contains 38 grams (1.3 oz) of sugar (usually in the form of high-fructose corn syrup in North America). The bottlers then sell, distribute, and merchandise Coca-Cola to retail stores, restaurants, and vending machines throughout the world. The Coca-Cola Company also sells concentrate for soda fountains of major restaurants and foodservice distributors. The Coca-Cola Company has on occasion introduced other cola drinks under the Coke name. The most common of these is Diet Coke, along with others including Caffeine-Free Coca-Cola, Diet Coke Caffeine-Free, Coca-Cola Zero Sugar, Coca-Cola Cherry, Coca-Cola Vanilla, and special versions with lemon, lime, and coffee. Coca-Cola was called Coca-Cola Classic from July 1985 to 2009, to distinguish it from \"New Coke\". Based on Interbrand\'s \"best global brand\" study of 2020, Coca-Cola was the world\'s sixth most valuable brand.[3] In 2013, Coke products were sold in over 200 countries worldwide, with consumers drinking more than 1.8 billion company beverage servings each day.[4] Coca-Cola ranked No. 87 in the 2018 Fortune 500 list of the largest United States corporations by total revenue.</string>
    <string name="tv_pepsi_description">Pepsi was first introduced as \"Brad\'s Drink\"[1] in New Bern, North Carolina in 1893 by Caleb Bradham, who made it at his drugstore where the drink was sold. It was renamed Pepsi-Cola in 1898, \"Pepsi\" because it was advertised to relieve dyspepsia[2][1][3] (indigestion) and \"Cola\" referring to the cola flavor.[3] Some have also suggested that \"Pepsi\" may have been a reference to the drink aiding digestion like the digestive enzyme pepsin,[4][3] but pepsin itself was never used as an ingredient to Pepsi-Cola.[1] The original recipe also included sugar and vanilla.[1] Bradham sought to create a fountain drink that was appealing and would aid in digestion and boost energy.[1] The original stylized Pepsi-Cola wordmark used from 1898 until 1905. In 1903, Bradham moved the bottling of Pepsi from his drugstore to a rented warehouse. That year, Bradham sold 7,968 gallons of syrup. The next year, Pepsi was sold in six-ounce bottles, and sales increased to 19,848 gallons. In 1909, automobile race pioneer Barney Oldfield was the first celebrity to endorse Pepsi, describing it as \"A bully drink...refreshing, invigorating, a fine bracer before a race.\" The advertising theme \"Delicious and Healthful\" was then used over the next two decades.[5] A 1919 newspaper ad for Pepsi-Cola In 1923, the Pepsi-Cola Company entered bankruptcy—in large part due to financial losses incurred by speculating on the wildly fluctuating sugar prices as a result of World War I. Assets were sold and Roy C. Megargel bought the Pepsi trademark.[1] Megargel was unsuccessful in efforts to find funding to revive the brand and soon Pepsi-Cola\'s assets were purchased by Charles Guth, the president of Loft, Inc. Loft was a candy manufacturer with retail stores that contained soda fountains. He sought to replace Coca-Cola at his stores\' fountains after The Coca-Cola Company refused to give him additional discounts on syrup. Guth then had Loft\'s chemists reformulate the Pepsi-Cola syrup formula.[6] On three occasions between 1922 and 1933, the Coca-Cola Company was offered the opportunity to purchase the Pepsi-Cola Company, which it declined on each occasion</string>
    <string name="tv_schweppes_desription">In the late 18th century, German-Genevan scientist Johann Jacob Schweppe developed a process to manufacture bottled carbonated mineral water based on the discoveries of English chemist Joseph Priestley.[5] Schweppe founded the Schweppes Company in Geneva in 1783 to sell carbonated water.[6] In 1792, he moved to London to develop the business there. In 1843, Schweppes commercialised Malvern Water at the Holywell Spring in the Malvern Hills, which was to become a favourite of the British Royal Family until parent company Coca-Cola closed the historic plant in 2010 to local outcry.[7] In 1969, the Schweppes Company merged with Cadbury to become Cadbury Schweppes. After acquiring many other brands in the ensuing years, the company was split in 2008, with its US beverage unit becoming Keurig Dr Pepper and separated from its global confectionery business (now part of Mondelez International).[8] Keurig Dr Pepper is the current owner of the Schweppes trademark in Canada and United States. The Coca-Cola Company owns the Schweppes brand in several territories, including 21 European countries. In a further 22 European countries, the brand is owned by Schweppes International Limited (a subsidiary of Suntory).[9] In China, Hong Kong and Taiwan, Swire\'s subsidiary Swire Coca-Cola produces Schweppes branded beverages.[10] The Japanese Asahi Group bought Schweppes Australia in 2008 from Cadbury,[11] and owns the trademark in Australia. Mainstay Schweppes products include ginger ale (1870),[12] bitter lemon (1957),[13] and tonic water (the first carbonated tonic – 1871).</string>
    <string name="btn_coke_about">About</string>
    <string name="btn_pepsi_about">About</string>
    <string name="btn_schweppes_about">About</string>
    <string name="btn_dr_pepper_about">About</string>
</resources>